--- a/HTML/contacts.htm
+++ b/HTML/contacts.htm
@@ -6,7 +6,7 @@
 <html class="no-js csstransforms no-csstransforms3d csstransitions large-screen"><!--<![endif]--><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Каталог</title>
+    <title>Контакты</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Каталог продукции 'Maz ceramics'">
     <meta name="keywords" content="Чашки">
@@ -141,8 +141,12 @@
 <h5>Маз-Керамика</h5>
 <p> Наша компания производит изделия из керамики с 1994 года. Приоритетным направлением является производство сувениров.</p>
 
-<p>Адреса в Украине:
-
+<h5>Телефоны в Украине:</h5>
+<p>Виталий: +38 050 531 9333</p>
+<h5>Электронная почта:</h5>
+<p>менеджер: sales@mazceramics.com</p>
+<h5>Адреса филиалов и офисов</h5>
+<p>
 Компания MazCeramics динамично развивается и, в настоящее время, филиалы сети вы можете встретить в таких странах как Германия, Австрия, Швейцария, Великобритания, Испания, Греция, Венгрия и Украина.</p>
 
 <div>
