--- a/HTML/how.htm
+++ b/HTML/how.htm
@@ -6,7 +6,7 @@
 <html class="no-js csstransforms no-csstransforms3d csstransitions large-screen"><!--<![endif]--><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Каталог</title>
+    <title>Условия покупки</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Каталог продукции 'Maz ceramics'">
     <meta name="keywords" content="Чашки">
@@ -129,7 +129,7 @@
  
 <div class="container">
         <div class="push-up blocks-spacer">
-            <h1 class="lobster about-us">Условия покупки</h1>
+            <h1 class="lora about-us">Условия покупки</h1>
             <div class="row">
                 <aside class="span3">
                     <div class="sidebar-item">
