--- a/HTML/index.htm
+++ b/HTML/index.htm
@@ -279,11 +279,7 @@
                         </div>
                     </div>
                     <div style="width: 1170px; margin-right: 0px;" class="slide">
-                        <div class="row">
-
-
-                           
-
+                        <div class="row">                     
 
 
                          
@@ -293,7 +289,7 @@
                              <div class="product">
                                 <div class="product-img featured">
                                     <div class="picture ">  
-                                        <img src="mazceramics/products/2/20.jpg" alt="Кружка" title="Кружка" class="img-responsive" height="187" width="270">                
+                                        <img src="mazceramics/products/2/21.jpg" alt="Кружка" title="Кружка" class="img-responsive" height="187" width="270">                
                                         <div class="img-overlay">
                                             <a href="./cups.htm" title="Кружка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
                                         </div>
@@ -315,14 +311,14 @@
                              <div class="product">
                                 <div class="product-img featured">
                                     <div class="picture ">  
-                                        <img src="mazceramics/products/2/20.jpg" alt="Пиала" title="Пиала" class="img-responsive" height="187" width="270">                
+                                        <img src="mazceramics/products/2/22.jpg" alt="Пиала" title="Пиала" class="img-responsive" height="187" width="270">                
                                         <div class="img-overlay">
                                             <a href="./cups.htm" title="Пиала" class="btn more btn-primary">ПОДРОБНЕЕ</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="main-titles">
-                                    <h5 class="no-margin">Пиала</h5>
+                                    <h5 class="no-margin">Кружка</h5>
                                 </div>
                                 <p class="desc"><b>Артикул:</b> <span itemprop="identifier" content="583-200">583-200</span></p>
                                 <p class="desc">
@@ -330,6 +326,49 @@
 
                                 </div>
                             </div> 
+
+                            <div class="span3">
+                             <div class="product">
+                                <div class="product-img featured">
+                                    <div class="picture ">  
+                                        <img src="mazceramics/products/2/25.jpg" alt="Пиала" title="Пиала" class="img-responsive" height="187" width="270">                
+                                        <div class="img-overlay">
+                                            <a href="./cups.htm" title="Пиала" class="btn more btn-primary">ПОДРОБНЕЕ</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="main-titles">
+                                    <h5 class="no-margin">Кружка</h5>
+                                </div>
+                                <p class="desc"><b>Артикул:</b> <span itemprop="identifier" content="583-200">583-200</span></p>
+                                <p class="desc">
+                                    <b>Размер:</b> 650мл,13.8*7.7*7.3см    </p>
+
+                                </div>
+                            </div> 
+
+                            <div class="span3">
+                             <div class="product">
+                                <div class="product-img featured">
+                                    <div class="picture ">  
+                                        <img src="mazceramics/products/2/4.jpg" alt="Пиала" title="Пиала" class="img-responsive" height="187" width="270">                
+                                        <div class="img-overlay">
+                                            <a href="./cups.htm" title="Пиала" class="btn more btn-primary">ПОДРОБНЕЕ</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="main-titles">
+                                    <h5 class="no-margin">Кружка</h5>
+                                </div>
+                                <p class="desc"><b>Артикул:</b> <span itemprop="identifier" content="583-200">583-200</span></p>
+                                <p class="desc">
+                                    <b>Размер:</b> 650мл,13.8*7.7*7.3см    </p>
+
+                                </div>
+                            </div> 
+
+
+
 
                         </div>
                     </div>
