--- a/HTML/catalog.htm
+++ b/HTML/catalog.htm
@@ -76,7 +76,7 @@
         <div class="navbar-inner">
           <div class="container">
             <div class="row">
-              <div class="span12">
+              <div class="span12 radius-nav">
 					<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -149,7 +149,7 @@
 <aside class="span3 left-sidebar" id="tourStep1">
     <div class="sidebar-item sidebar-filters" id="sidebarFilters">
         <div class="underlined">
-            <a href="http://mazceramics.com/catalog/"><h3><span class="sub-logo Open_Sans"><span class="light">Каталог</span></span></h3></a>
+            <a href="http://mazceramics.com/catalog/"><h3><span class="sub-logo lora"><span class="light">Каталог</span></span></h3></a>
         </div>
         <div class="accordion-group" id="tourStep2">
             <div class="accordion-heading">
@@ -158,7 +158,7 @@
             <div id="filterOne" class="accordion-body collapse in">
                 <ul class="accordion-inner">                            
                 		
-                                            <li><a href="http://mazceramics.com/aksessuary-dlja-vannoj-komnaty/" class="">Наборы для вина</a>
+                                            <li><a href="./vines.htm" class="">Наборы для вина</a>
                                                 </li>    
                                             <li><a href="./cups.htm" class="">Чашки чайные</a>
                                                 </li>    
@@ -380,7 +380,7 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/ekskljuzivnye-fotoprinty/">
+                                                <a href="./sea.htm">
                                                                                                             <img title="Эксклюзивные фотопринты" alt="Эксклюзивные фотопринты" src="mazceramics/products/3/3.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
