--- a/HTML/sea.htm
+++ b/HTML/sea.htm
@@ -6,7 +6,7 @@
 <html class="no-js csstransforms no-csstransforms3d csstransitions large-screen"><!--<![endif]--><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Каталог</title>
+    <title>Для аквариума</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Каталог продукции 'Maz ceramics'">
     <meta name="keywords" content="Чашки">
@@ -151,7 +151,7 @@
 <aside class="span3 left-sidebar" id="tourStep1">
     <div class="sidebar-item sidebar-filters" id="sidebarFilters">
         <div class="underlined">
-            <a href="http://mazceramics.com/catalog/"><h3><span class="sub-logo lobster"><span class="light">Каталог</span></span></h3></a>
+            <a href="http://mazceramics.com/catalog/"><h3><span class="sub-logo lora"><span class="light">Каталог</span></span></h3></a>
         </div>
         <div class="accordion-group" id="tourStep2">
             <div class="accordion-heading">
@@ -160,7 +160,7 @@
             <div id="filterOne" class="accordion-body collapse in">
                    <ul class="accordion-inner">                            
                         
-                                            <li><a href="http://mazceramics.com/aksessuary-dlja-vannoj-komnaty/" class="">Наборы для вина</a>
+                                            <li><a href="./vines.htm" class="">Наборы для вина</a>
                                                 </li>    
                                             <li><a href="./cups.htm" class="">Чашки чайные</a>
                                                 </li>    
@@ -182,8 +182,8 @@
                                                 </li>    
                                             <li><a href="./animal.htm" class="">Товары для животных</a>
                                                 </li>    
-                                            <li><a href="./sea.htm" class="">Для аквариума</a>
-                                                </li>    
+                                            <li><a href="./sea.htm" class="active">Для аквариума</a>
+                                                </li>      
                                                                 
                 </ul>
             </div>
@@ -227,7 +227,7 @@
                 <div class="underlined push-down-20">
                     <div class="row">
                         <div class="span4">
-                            <h1 class="category-h1">Чашки чайные</h1>
+                            <h1 class="category-h1 lora">Керамика для аквариума</h1>
                         </div>
                         <div class="span5">  </div>
                     </div>
