--- a/HTML/species.htm
+++ b/HTML/species.htm
@@ -6,7 +6,7 @@
 <html class="no-js csstransforms no-csstransforms3d csstransitions large-screen"><!--<![endif]--><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Каталог</title>
+    <title>Для специй</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Каталог продукции 'Maz ceramics'">
     <meta name="keywords" content="Чашки">
@@ -151,7 +151,7 @@
 <aside class="span3 left-sidebar" id="tourStep1">
     <div class="sidebar-item sidebar-filters" id="sidebarFilters">
         <div class="underlined">
-            <a href="http://mazceramics.com/catalog/"><h3><span class="sub-logo lobster"><span class="light">Каталог</span></span></h3></a>
+            <a href="http://mazceramics.com/catalog/"><h3><span class="sub-logo lora"><span class="light">Каталог</span></span></h3></a>
         </div>
         <div class="accordion-group" id="tourStep2">
             <div class="accordion-heading">
@@ -160,29 +160,29 @@
             <div id="filterOne" class="accordion-body collapse in">
                 <ul class="accordion-inner">                            
                         
-                                            <li><a href="./vines.htm" class="">Наборы для вина</a>
+                                       <li><a href="./vines.htm" class="">Наборы для вина</a>
                                                 </li>    
-                                            <li><a href="./cups.htm" class="active">Чашки чайные</a>
+                                            <li><a href="./cups.htm" class="">Чашки чайные</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/dekor/" class="">Чашки кофейные</a>
+                                            <li><a href="./cofeecups.htm" class="">Чашки кофейные</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/novogodnjaja-kollektcija/" class="">Бокал для пива</a>
+                                            <li><a href="./jug.htm" class="">Бокал для пива</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/posuda/" class="">Чайные наборы</a>
+                                            <li><a href="./teaset.htm" class="">Чайные наборы</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/sadovyj-dekor/" class="">Кофейные наборы</a>
+                                            <li><a href="./coffeeset.htm" class="">Кофейные наборы</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/serijnaja-posuda-iz-keramiki/" class="">Кувшины</a>
+                                            <li><a href="./goblet.htm" class="">Кувшины</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/simvol-goda/" class="">Набор для специй</a>
+                                            <li><a href="./species.htm" class="active">Набор для специй</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/suveniry/" class="">Вазы</a>
+                                            <li><a href="./vase.htm" class="">Вазы</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/tcvetochnye-vazy-vazony-kashpo/" class="">Подсвечники</a>
+                                            <li><a href="./candels.htm" class="">Подсвечники</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/tcvety/" class="">Товары для животных</a>
+                                            <li><a href="./animal.htm" class="">Товары для животных</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/ekskljuzivnye-fotoprinty/" class="">Для аквариума</a>
+                                            <li><a href="./sea.htm" class="">Для аквариума</a>
                                                 </li>    
                                                                 
                 </ul>
@@ -227,7 +227,7 @@
                 <div class="underlined push-down-20">
                     <div class="row">
                         <div class="span4">
-                            <h1 class="category-h1">Чашки чайные</h1>
+                            <h1 class="category-h1 lora">Для специй</h1>
                         </div>
                         <div class="span5">  </div>
                     </div>
@@ -240,8 +240,8 @@
                          <div class="product">
                             <div class="product-img featured">
                                 <div class="picture ">  
-                                    <img src="mazceramics/products/2/2.jpg" alt="Чашка" title="Чашка" class="thumbnail" height="187" width="270">
-                                     <div class="img-overlay"><a href="./mazceramics/products/2/21.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
+                                    <img src="mazceramics/products/5/1.jpg" alt="Чашка" title="Чашка" class="thumbnail" height="187" width="270">
+                                     <div class="img-overlay"><a href="./mazceramics/products/5/1.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
                                      </div>
                                 </div>
                             </div>
@@ -257,8 +257,8 @@
                          <div class="product">
                             <div class="product-img featured">
                                 <div class="picture ">  
-                                    <img src="mazceramics/products/2/3.jpg" alt="Чашка" title="Чашка" class="thumbnail" height="187" width="270">
-                                     <div class="img-overlay"><a href="mazceramics/products/2/3.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
+                                    <img src="mazceramics/products/5/2.jpg" alt="Чашка" title="Чашка" class="thumbnail" height="187" width="270">
+                                     <div class="img-overlay"><a href="mazceramics/products/5/2.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
                                      </div>
                                 </div>
                             </div>
@@ -275,7 +275,7 @@
                             <div class="product-img featured">
                                 <div class="picture ">  
                                     <img src="mazceramics/products/2/4.jpg" alt="Чашка" title="Чашка" class="thumbnail" height="187" width="270">
-                                     <div class="img-overlay"><a href="mazceramics/products/2/4.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
+                                     <div class="img-overlay"><a href="mazceramics/products/5/3.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
                                      </div>
                                 </div>
                             </div>
@@ -293,7 +293,7 @@
                             <div class="product-img featured">
                                 <div class="picture ">  
                                     <img src="mazceramics/products/2/5.jpg" alt="Чашка" title="Чашка" class="thumbnail" height="187" width="270">
-                                     <div class="img-overlay"><a href="mazceramics/products/2/5.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
+                                     <div class="img-overlay"><a href="mazceramics/products/5/4.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
                                      </div>
                                 </div>
                             </div>
@@ -310,7 +310,7 @@
                             <div class="product-img featured">
                                 <div class="picture ">  
                                     <img src="mazceramics/products/2/6.jpg" alt="Чашка" title="Чашка" class="thumbnail" height="187" width="270">
-                                     <div class="img-overlay"><a href="mazceramics/products/2/6.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
+                                     <div class="img-overlay"><a href="mazceramics/products/5/5.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
                                      </div>
                                 </div>
                             </div>
@@ -327,7 +327,7 @@
                             <div class="product-img featured">
                                 <div class="picture ">  
                                     <img src="mazceramics/products/2/7.jpg" alt="Чашка" title="Чашка" class="thumbnail" height="187" width="270">
-                                     <div class="img-overlay"><a href="mazceramics/products/2/7.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
+                                     <div class="img-overlay"><a href="mazceramics/products/5/6.jpg" title="Чашка" class="btn more btn-primary">ПОДРОБНЕЕ</a>
                                      </div>
                                 </div>
                             </div>
