--- a/HTML/about.htm
+++ b/HTML/about.htm
@@ -6,7 +6,7 @@
 <html class="no-js csstransforms no-csstransforms3d csstransitions large-screen"><!--<![endif]--><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Каталог</title>
+    <title>О нас</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Каталог продукции 'Maz ceramics'">
     <meta name="keywords" content="Чашки">
@@ -49,7 +49,7 @@
                                 <!--  <a href="javascript:void(0)" onclick="form_callback()" role="button" data-toggle="modal" class="btn btn-danger">Заказать звонок</a> -->
                                 <div class="tel"><a href="callto:+380505319333">Виталий: +38 050 531 9333</a></div>
                                 <!--<div class="tel"><a href="mailto:sales@mazceramics.com">sales@mazceramics.com</a></div>-->                           
-                                <div class="tel"><a href="callto:+3805005505">Лариса: +38 050 450 5505</a></div>
+                                <div class="tel"><a href="callto:+3805005505">Лариса: +38 050 531 9355</a></div>
                            
                             </div>
                        <!--span class="navbar-form-w">
@@ -76,7 +76,7 @@
         <div class="navbar-inner">
           <div class="container">
             <div class="row">
-              <div class="span12">
+              <div class="span12 radius-nav gradient">
                     <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -136,8 +136,8 @@
 <div class="row">
 <div id="spyMenu" class="span3 affix-top">
 <ul class="nav nav-pills nav-stacked">
-<li><a href="#first">История цеха</a></li>
-<li><a href="#two">Вакансии</a></li>
+<li><a href="#first">Керамика</a></li>
+<li><a href="#two">Наше предприятие</a></li>
 </ul>
 </div>
 </div>
@@ -147,26 +147,52 @@
 <section class="blocks-spacer">
 <div id="first" class="row-fluid push-down-20">
 <div class="underlined push-down-20">
-<h3><span class="light"></span> История цеха</h3>
+<h3><span class="light"></span>Керамика</h3>
 </div>
-<h5>Маз-Керамика</h5>
-<p> Наша компания производит изделия из керамики с 1994 года. Приоритетным направлением является производство сувениров.</p>
+<h5>История</h5>
 
-<p>Вот несколько основных причин, почему с нами сотрудничать выгодно:
-- Производственные мощности компании позволяют выполнить любые оптовые заказы.
-- Мы производители – у нас дешевле!
-- Оптимальное соотношение цена-качество.
-- Выполним эксклюзивные разработки по Вашему индивидуальному заказу.
-- Все изделия изготовлены из экологически чистых материалов.</p>
+<p>Глиняная посуда стала первым революционным изобретением в истории человечества. Задолго до колеса, стали или пороха она навсегда изменила жизнь человека, избавив его от необходимости постоянно находиться возле водоемов. С появлением герметичных сосудов наши далекие-далекие предки стали запасаться не только водой, но также семенами и перемолотыми продуктами. До первого глиняного кувшина единственным пригодным для воды сосудом была емкость из тыквы, которую невозможно было поставить на огонь.
+</p>
+<p>
+Гончарное дело – одно из древнейших искусств на земле, и оно до сих пор не утратило своей актуальности. Посуда из глины – красивая, практичная и безопасная. Керамика – то есть обожженная глина – химически инертный материал. Она не вступает в реакцию с едой или жидкостью, на ней не образуется накипь, а при перегреве материал не выделяет токсичных веществ. В отличие от алюминия или тефлона, керамика абсолютно безопасна для человека и окружающей среды. Это экологически чистый материал.
+</p>
+<p>
+В керамической посуде кофе и чай долго остаются горячими, а прохладительные напитки наоборот – медленно нагреваются. В муке, которая хранится в сосуде из глины, никогда не заведутся жуки, а на овощах не появится плесень. Наконец, стоимость глины при всех ее преимуществах значительно ниже, чем стекла, хрусталя или металла.
+Традиционная славянская керамика
+</p>
 
+<!-- Славянские народы имеют самобытные традиции изготовления керамики. Ни один дом в восточной части Европы не обходился без глиняных мисок, крынок и горшков. В посуде из керамики органично переплелись славянская практичность и любовь к красоте. Изготовленная по старинным технологиям, славянская керамика демонстрирует прекрасную устойчивость к механическим повреждениям. Ее невозможно поцарапать, и нужно очень постараться, чтобы появились сколы или другие маленькие дефекты.
+
+Традиционная посуда – это также красота и уют. Ее украшают орнаменты и узоры, которым наши предки придавали сакральное значение. В эпоху высоких технологий, пластика и хрома, натуральные материалы и фольклорные узоры позволяют почувствовать себя по-настоящему тепло и уютно, ощутить связь времен. Если вы умеете наслаждаться вкусной едой и напитками, вы знаете, насколько приятнее есть и пить из красивой посуды.
+Посуда из керамики с доставкой
+
+В нашем интернет-магазине представлена славянская керамика ручной работы. Наша посуда не просто имитирует старинные предметы обихода и традиционные узоры – нет, она изготовлена по классическим гончарным технологиям. Горшки, чашки и тарелки вылепили и обожгли в печи умелые человеческие руки, поэтому мы имеем полное право утверждать: у нас вы можете купить посуду, сделанную с душой.
+
+Над посудой из нашего каталога работали искусные мастера. Она выполнена из натуральной красной глины, которая дополнительно украшена глазурью, лощением, разнообразными узорами и росписью. У нас вы можете купить все виды глиняных изделий:
+
+    кувшины и вазы;
+    чашки и бокалы;
+    горшки и миски;
+    тарелки, крынки, турки и многое другое.
+
+Чтобы вы могли оценить красоту и удобство посуды, мы позаботились не только о подробном описании изделий, но также о красочных фото. Делитесь впечатлениями от традиционной керамики в отзывах на сайте, а чтобы оформить заказ, закажите обратный звонок или просто добавьте товар в корзину. В нашем магазине вас ждет большой выбор изящной глиняной посуды, демократичные цены и превосходный сервис. Мы доставляем заказы по всей Украине! </p> -->
 <div>
 
 <div id="two" class="row-fluid push-down-20">
 <div class="underlined push-down-20">
-<h3><span class="light"></span>Вакансии цеха</h3>
+<h3><span class="light"></span>Наше предприятие</h3>
 </div>
-<h5>Требуются работники</h5>
-<p> Наша компания ищет высокомотивированных сотрудников</p>
+<h5>Маз-Керамика</h5>
+<p> Наша компания производит изделия из керамики с 1994 года. Приоритетным направлением является производство сувениров.</p>
+
+<p>Вот несколько основных причин, почему с нами сотрудничать выгодно:</p>
+<ul>
+    <li> Производственные мощности компании позволяют выполнить любые оптовые заказы.</li>
+    <li> Мы производители – у нас дешевле!</li>
+    <li> Оптимальное соотношение цена-качество.</li>
+    <li> Выполним эксклюзивные разработки по Вашему индивидуальному заказу.</li>
+    <li> Все изделия изготовлены из экологически чистых материалов.</li>
+</ul>
 <div>
 
 </section>
